<resources>
    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">Equity App</string>
    <string name="description_logo">Equty App</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Get Nearest ATM</string>
    <string name="title_feature1">Get Nearest ATM</string>
    <string name="title_feature2">Eazzy 24/7</string>
    <string name="title_feature3">Rates N Charges</string>
    <string name="title_feature4">NSE Live!</string>
    <string name="title_feature5">Equity News</string>
    <string name="btn_cancel_title">Cancel</string>
    <string name="btn_logout_title">Logout</string>
    <string name="tc1_user_reg">1.The use of Eazzy 24/7 made available by Equity Bank to its customers shall at all times be governed by the following terms and conditions.
	    
	</string>
	<string name="tc2_user_reg">2.In these terms, reference to “we” “us” “our” shall mean Equity Bank and the reference to “you” “your” shall mean you the customer
	    
	</string>
	<string name="tc3_user_reg">3.You accept responsibility for making sure that you understand how to use the Eazzy 24/7 service. We shall not be responsible to you for any
		losses caused by your failure to properly use the service.
	    
	</string>
	<string name="tc4_user_reg">4.We reserve the right to determine the services that will be offered on Eazzy 24/7 and will from time to time determine or specify at our
		discretion the scope and features of the Eazzy 24/7 and are entitled to modify, expand or reduce the same at any time without notice to
		you. By making an application to use Eazzy 24/7 you will be bound by any future modifications, expansions enhancements deletions or
		reductions made by us.
	    
	</string>
	<string name="tc5_user_reg">5.You can register only one mobile phone number for multiple accounts but cannot register multiple mobile numbers for one account
		number. You hereby confirm, declare and acknowledge that the phone number provided to us is owned by you or in your control and that
		any communication from and to the said phone is and shall be with the knowledge of and within your control. You shall in all circumstances
		accept full responsibility for any and all instructions sent to us from the phone number and you hereby authorize us to act on the
		instructions and process any and all transactions. You agree and acknowledge that we shall in no way be held responsible or liable if you
		incur loss as a result of carrying out the instructions of you pursuant to your access of the Eazzy 24/7.
	    
	</string>
	<string name="tc6_user_reg">6.The Eazzy 24/7 may, without prior notice to you, be suspended or terminated by us for any reason whatsoever, including, without limitation,
		invalid data, closure of related account (s), breakdown, maintenance, modification, expansion and/or enhancement work caused or initiated
		by the telecommunications company (s) concerned in relation to their network or by any service provider in respect of the Eazzy 24/7. We
		will not assume any liability or responsibility for any such suspension or termination.
	    
	</string>
	<string name="tc7_user_reg">7.The Eazzy 24/7 may be terminated at any time by notice from you to us in the form of an application form (available at any of our branches).
		Any such termination shall be effective within (2) days of receipt of the termination notice by us.
	    
	</string>
	<string name="tc8_user_reg">8.You acknowledge that any information received by you under the Eazzy 24/7 is for information only, and shall not be taken as conclusive
		evidence of the matter to which it relates. You understand that the date and time on the information advices best the date and time of
		Equity Bank’s main computer.
	    
	</string>
	<string name="tc9_user_reg">9.You shall use only the mobile phone number that has been informed to us stated in the application form. You shall promptly notify us, by
		filing out a change request form, of any changes to information provided to us by you relating to or for the purposes of the Eazzy 24/7
		including the details of your designated mobile phone number and the telecommunications company providing or servicing it. In addition,
		you shall promptly inform us of any loss or theft of your mobile phone by calling our Help Desk at Card Center on telephone numbers
		provided from time to time. We shall not be liable for any loss or claim resulting from the relaying of any information to the designated
		mobile phone number prior to receipt of any notification of loss or theft.
		Following receipt of notification of loss or theft, the bank shall deactivate the subscription until further instructions are received.
	    
	</string>
	<string name="tc10_user_reg">10.You shall be solely responsible for all the transactions and consequences arising out of the messages emanating from the registered mobile
		phone instrument. We will not assume any responsibility or liability for unauthorized messages sent by any other person without authority.
	    
	</string>
	<string name="tc11_user_reg">11.We shall not assume any liability or responsibility for any failure or delay in transmitting information to you or any error in such information,
		unless this results from negligence or willful default on our part. In particular, we shall not assume any liability or responsibility for the
		consequences arising from any cause beyond our control including, without limitation, failure of your telecommunications equipment to
		receive information for whatever reason, any telecommunications breakdown, mechanical failure, path failure, malfunction, breakdown,
		interruption or accuracy of equipment or installation, force majeure event such as sabotage, fire, floods, explosion, acts of God, civil
		commotion, strikes, act of government, computer hacking, unauthorized access to computer data, computer crashes etc.
	    
	</string>
	<string name="tc12_user_reg">12.We shall not be liable under any circumstances for any damages whatsoever whether such interruption of business or loss of any character
		or nature whatsoever and whether sustained by you or by any other person. We make no representations or give no warranty with respect
		to the quality of the service provided by any mobile service provider.
	    
	</string>
	<string name="tc13_user_reg">13.We will provide you with an initial PIN at the time of availing of service. You must keep your Personal Identification Number (PIN)
		confidential never under any circumstances disclosing it to any one and take all reasonable care to prevent its unauthorized and fraudulent
		use. . You acknowledge that the PIN selected acts as your authorized signature. The PIN authorizes and validates directions given by you. If
		you give your PIN to anyone or fail to safeguard its secrecy, you do so at your own risk and we shall not be liable for any loss arising from a
		shared PIN.
	    
	</string>
	<string name="tc14_user_reg">14.You must tell the bank immediately of any unauthorized access to the Eazzy 24/7 or any unauthorized transactions or any instructions which
		you know of or suspect
	    
	</string>
	<string name="tc15_user_reg">15.In consideration of us agreeing to provide the Eazzy 24/7 service to you, you hereby irrevocably agree and undertake to indemnify and keep
		us indemnified at all times hereafter and hold us harmless against all actions, claims, demands, liabilities, losses, damages, legal fees, costs,
		and expenses of whatever nature that may result or which we may sustain, suffer or incur as a result of our agreeing to provide the Eazzy
		24/7 to you. You further agree and confirm that this indemnity shall remain valid and subsisting and binding upon you notwithstanding
		withdrawal, either partially or in totality, of the Eazzy 24/7 service.
	    
	</string>
	<string name="tc16_user_reg">16.We shall not be liable for any losses or damage caused (a) by the disclosure of confidential information; (b) by the disclosure of information
		to the designated mobile phone where such designated mobile phone is in another person’s possession with your consent; or (c) to your
		data, designated mobile phone, communications equipment or other equipment, in each case caused by your use of the Eazzy 24/7 unless
		such loss or damage is directly and solely caused by our willful default or negligence.
	    
	</string>
	<string name="tc17_user_reg">17.We reserve the right and you hereby authorize us to send you customized messages over your mobile phone for marketing or regarding the
		provision of other services or products or for any other purpose we deem fit unless specifically instructed otherwise by you in writing.
	    
	</string>
	<string name="tc18_user_reg">18.You understand and confirm that we may, at our sole discretion, record any and all information or instructions relayed from your phone to
		us and to you from us and collect and store the same along with all information in such form and manner as it deems necessary and
		appropriate. The information may be relied upon by us or any person who may reasonably require the same and or produced in any
		proceedings or otherwise.
	    
	</string>
	<string name="tc19_user_reg">19.Any notice from us to you may be in such manner and by such means of communication as we shall deem fit, including, without limitation,
		use of direct mailing material, advertisement, branch display, electronic communication such as e-mail or via the Eazzy 24/7. Any notice
		from you to us shall be in writing at the following address unless otherwise indicated in these Terms and Conditions: Card Center, Equity Bank,
		P. O. Box 75104-00200 Nairobi Kenya.
	    
	</string>
	<string name="tc20_user_reg">20.We reserve the right at all times to vary or amend the foregoing Termsand Conditions or to introduce new Terms and Conditions. Any such
		variations or amendments shall become effective and binding on you upon notification by us to you. If you are unwilling to accept such
		variations or amendments you may terminate the Eazzy 24/7 service by providing written notice thereof.
	    
	</string>
	<string name="tc21_user_reg">21.Operator charges apply.
	    
	</string>
	<string name="tc22_user_reg">22.These Terms and Conditions shall be governed by and construed in accordance with the Laws of the Republic of Kenya.
	    
	</string>
	<string name="tc23_user_reg">23.sBy registering to Eazzy 24/7 you agree to have understood, accept and abide by all the Terms and Conditions governing the Eazzy 24/7
		including any subsequent variations or amendments
	    
	</string>
	<string name="tc_acceptance_user_reg">I accept Terms and Conditions</string>
    <string name="menu_eazyy247_main_menu">MAIN MENU</string>
    <string name="airtime_topup_eazyy247_main_menu">Airtime TopUp</string>
    <string name="balance_enquiry_eazyy247_main_menu">Balance Enquiry</string>
    <string name="mini_statement_eazyy247_main_menu">Mini Statement</string>
    <string name="funds_transfer_eazyy247_main_menu">Funds Transfer</string>
    <string name="bill_payment_eazyy247_main_menu">Bill Payment</string>
    <string name="requests_eazyy247_main_menu">Requests</string>
    <string name="Settings__eazyy247_main_menu">Settings</string>
    <string name="logout_eazyy247_main_menu">Logout</string>
     <string name="source_ac_airtime_topup_menu_option">Source A/C:</string>
     <string name="operator_airtime_topup_menu_option">Mobile Operator:</string>
     <string name="mobile_no_airtime_topup_menu_option">Mobile No.:</string>
     <string name="amount_airtime_topup_menu_option">Amount(KES):</string>
     <string name="btn_topup_airtime_topup_menu_option">TopUp</string>
     <string name="btn_beneficiary_airtime_topup_menu_option">Beneficiary</string>
</resources>