<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout style="@style/TitleBar"
        android:id="@+id/airtime_topup_main_menu_option_header">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        
    </LinearLayout>
    
	<!-- Body starts here -->
        
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/airtime_topup_main_menu_option_header">
        
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >
 
        <!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/airtime_topup_eazyy247_main_menu"
            android:textSize="20dip"
            android:textStyle="bold" />
        
        <TableLayout
            android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:stretchColumns="1">
			
            <TableRow >
               <TextView
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:text="@string/mobile_no_airtime_topup_menu_option" />
      
        		<EditText
            		android:id="@+id/mobile_no_airtime_topup_main_menu_edittext"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content" /> 
            </TableRow>
            <TableRow >
               <TextView
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:text="@string/source_ac_airtime_topup_menu_option" />
      
        		<EditText
            		android:id="@+id/source_ac_airtime_topup_main_menu_edittext"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content" /> 
            </TableRow>
            <TableRow >
               <TextView
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:text="@string/operator_airtime_topup_menu_option" />
      			<!-- will change this to a drop downlist -->
      			
        		<EditText
            		android:id="@+id/operator_airtime_topup_main_menu_edittext"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content" /> 
            </TableRow>
            <TableRow >
               <TextView
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:text="@string/amount_airtime_topup_menu_option" />
               
        		<EditText
            		android:id="@+id/amount_airtime_topup_main_menu_edittext"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content" /> 
            </TableRow>
        </TableLayout> 
         
        <TableLayout 
            android:layout_width="fill_parent"
			android:layout_height="fill_parent">
            <TableRow>
        		<Button
            		android:id="@+id/btn_buy_airtime"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_marginTop="20dip"
            		android:text="@string/btn_topup_airtime_topup_menu_option" />
        
       
            	<Button
            		android:id="@+id/btn_cancel_airtime_menu"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_marginTop="20dip"
            		android:text="@string/btn_cancel_title" />
            	<Button
            		android:id="@+id/btn_view_beneficiary_airtime_menu"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_marginTop="20dip"
            		android:text="@string/btn_beneficiary_airtime_topup_menu_option" />
			</TableRow>            
        </TableLayout>
        <Button
            		android:id="@+id/btn_logout_buy_airtime_main_menu_option"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_marginTop="10dip"
            		android:background="@null"
            		android:text="@string/btn_logout_title" 
            		android:textColor="#21dbd4"
            		android:textStyle="bold"/>
        
         <TextView android:id="@+id/airtime_menu_hidden"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
        
    </LinearLayout>
    </ScrollView>
  
    <!--  Include Footer -->
	<LinearLayout
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true">
        
    	<include layout="@layout/footer_layout"/>
    
	</LinearLayout>
</RelativeLayout>